# ai-companion-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  components.py  main.py  prompts.py  settings.py
