[project]
name = "chat-app-backend"
version = "0.1.0"
description = "Realtime voice AI backend for the Swift chat app."
requires-python = ">=3.11,<3.14"
dependencies = [
    "aiavatar>=0.8.15",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
]

[tool.uv]
package = false
